# ktx-srt-auto-reservation

./: .gitignore  KTX-SRT-Macro-Windows.spec  KTX-SRT-Macro.spec  README.md  alembic.ini  build.py  build.sh  build.spec  build_windows.bat  main.py  pyproject.toml  version.txt
.github/: CODEOWNERS
.github/workflows/: build.yml  test.yml  windows-debug.yml
alembic/: env.py
alembic/versions/: 0eeb39075ab1_initial_migration_create_users_and_.py
assets/: favicon.icns
src/constants/: stations.py  ui.py
src/domain/: __init__.py
src/domain/models/: entities.py  enums.py
src/domain/repositories/: __init__.py  credential_repository.py
src/domain/services/: train_service.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: __init__.py  ktx_service.py  srt_service.py
src/infrastructure/database/: __init__.py  models.py  repository.py  session.py
src/infrastructure/mappers/: __init__.py  passenger_mapper.py
src/infrastructure/security/: __init__.py  credential_storage.py  dto.py  encryption.py
src/presentation/: qt.py
tests/: README.md  conftest.py
tests/infrastructure/: test_credential_storage.py  test_encryption.py  test_repository.py
tests/integration/infrastructure/: __init__.py
tests/integration/infrastructure/adapter/: test_adapters.py  test_ktx_service.py  test_srt_service.py
tests/unit/domain/: test_entities.py  test_enums.py  test_train_service.py
tests/unit/infrastructure/mapper/: test_passenger_mapper.py
tests/unit/infrastructure/security/: __init__.py  test_credential_storage.py  test_dto.py
tests/unit/presentation/: __init__.py  test_qt_components.py
