[project]
name = "srtmacro"
version = "0.1.0"
description = "A CLI tool for SRT subtitle file manipulation and automation"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.32.5",
    "cryptography>=46.0.1",
    "curl-cffi>=0.13.0",
    "pycryptodome>=3.18.0",
    "toga>=0.5.2",
    "pyqt6>=6.9.1",
    "pyinstaller>=6.16.0",
]

[project.scripts]
srtmacro = "srtmacro.main:app"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["srtmacro"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
