[project]
name = "ktx-srt-macro"
version = "0.1.0"
description = "KTX/SRT train ticket reservation macro"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "cryptography>=46.0.1",
    "curl-cffi>=0.13.0",
    "pycryptodome>=3.18.0",
    "pyqt6>=6.9.1",
    "pyinstaller>=6.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
